# asapm

./: .gitignore  LICENSE  README.md
.github/workflows/: linter-tauri.yml  linter-worker.yml  linter.yml  publish.yml  tests.yml
app/: nuxt.config.js  package-lock.json  package.json  tsconfig.json
app/components/: ConfirmationDialog.vue
app/components/layout/: NavigationDrawer.vue
app/components/password/: AnalyticsList.vue  PasswordDialog.vue  PasswordGenerator.vue
app/layouts/: default.vue  error.vue
app/middleware/: auth.js
app/mixins/: FormValidator.ts  PasswordUtil.ts
app/pages/: index.vue  signup.vue
app/pages/user/: analytics.vue  dashboard.vue
app/plugins/: clipboard.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/commands/: authentication.rs  generator.rs  mod.rs  password.rs
app/src-tauri/src/model/: backup.rs  encryption.rs  generator.rs  mod.rs  user.rs
app/store/: confirmation.js  generator.js  password.js  snackbar.js
nuxt/: README.md  nuxt.config.js  package-lock.json  package.json
nuxt/components/: Password.vue
nuxt/components/layout/: Footer.vue  Navigation.vue
nuxt/components/password/: PasswordDialog.vue
nuxt/layouts/: default.vue  error.vue
nuxt/middleware/: auth.js
nuxt/mixins/: FormValidator.ts
nuxt/pages/: index.vue  signup.vue
nuxt/pages/user/: dashboard.vue
nuxt/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
nuxt/src-tauri/src/: main.rs
nuxt/src-tauri/src/commands/: authentication.rs  encryption.rs  mod.rs  password.rs
nuxt/src-tauri/src/model/: backup.rs  encryption.rs  mod.rs  router.rs  user.rs
nuxt/store/: auth.js
worker/: .gitignore  Cargo.toml  wrangler.example.toml  wrangler.toml
worker/src/: lib.rs  user.rs
worker/src/api/: auth.rs  mod.rs  user.rs
worker/src/user/: auth.rs  user.rs
worker/src/utils/: console.rs  kv.rs  mod.rs
