[package]
name = "asapm"
version = "0.1.0"
description = "Another slighlty avoidable password manager"
authors = ["Randoooom"]
license = ""
repository = ""
default-run = "asapm"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "wry"] }
uuid = { version = "0.8.2", features = ["v4"] }
aes-gcm-siv = { version = "0.10.3", features = ["std"] }
pbkdf2 = "0.10.0"
rand = "0.8.4"
thiserror = "1.0.30"
base64 = "0.13.0"
zxcvbn = "2.1.2"
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
