[package]
name = "app"
version = "0.1.0"
description = "Another slighlty avoidable password manager"
authors = ["Randoooom"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "wry"] }
uuid = { version = "0.8.2", features = ["v4"] }
aes-gcm-siv = { version = "0.10.3", features = ["std"] }
pbkdf2 = "0.10.0"
rand = "0.8.4"
thiserror = "1.0.30"
matchit = "0.4.4"
futures = "0.3.19"
base64 = "0.13.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
